--- a/Spark.ipynb
+++ b/Spark.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -220,7 +220,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import csv\n",
+    "path = os.getcwd()+\"/OpinosisDataset1.0/topics/sound_ipod_nano_8gb.txt.data\"\n",
+    "#for filename in os.listdir(directory):\n",
+    "    \n",
+    "with open(path) as f:\n",
+    "    docs = f.read().split('\\n')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -229,29 +244,24 @@
      "text": [
       "log: finished to create the shingles for all the documents\n",
       "log: finished to create the signatures\n",
-      "candidate pairs [[0, 1], [2, 3], [4, 5]]\n",
-      "checked with signatures pairs [[0, 1], [2, 3], [4, 5]]\n",
-      "checked with shingles pairs [[[0, 1], 1.0], [[2, 3], 0.8461538461538461], [[4, 5], 0.9285714285714286]]\n",
-      "document 0 and document 1 are 1.0 similar (jaccardSimilarity)\n",
-      "document 4 and document 5 are 0.9285714285714286 similar (jaccardSimilarity)\n",
-      "document 2 and document 3 are 0.8461538461538461 similar (jaccardSimilarity)\n"
+      "candidate pairs [[5, 19], [30, 49], [33, 54], [53, 78], [62, 66], [62, 76]]\n",
+      "checked with signatures pairs [[62, 76]]\n",
+      "checked with shingles pairs [[[62, 76], 0.6170212765957447]]\n",
+      "document 62 and document 76 are 0.6170212765957447 similar (jaccardSimilarity)\n",
+      " It is compact and the sound quality is very good .\n",
+      " the sound quality is very good .\n"
      ]
     }
    ],
    "source": [
-    "doc1 = \"aaabbccccbbaaaa\"\n",
-    "doc2 = \"aaabbccccbbaaaa\"\n",
-    "doc3 = \"sfdfdbcfdsfdwwwwww\"\n",
-    "doc4 = \"sfdfdbcfdsfdwww\"\n",
-    "doc5 = \"eeevvvvttyyyyeeevvvvttyyyyq\"\n",
-    "doc6 = \"eeevvvvttyyyyeeevvvvttyyyy\"\n",
-    "docs = sc.parallelize([doc1,doc2,doc3,doc4,doc5,doc6])\n",
+    "\n",
+    "docsRdd = sc.parallelize(docs)\n",
     "\n",
     "shingleSize = 5\n",
     "band = 20\n",
     "r = 5\n",
     "threshold = (1/band)**(1/r)\n",
-    "jaccardThreshold = 0.8\n",
+    "jaccardThreshold = 0.6\n",
     "shingling = Shingling()\n",
     "compareSets = CompareSets()\n",
     "compareSignatures = CompareSignatures()\n",
@@ -260,7 +270,7 @@
     "lsh = LSH(band,r)\n",
     "\n",
     "# 1) create a list containiong all the sets of shingles of each document\n",
-    "shingles = docs.map(lambda x : shingling.shingle(x,shingleSize) )\n",
+    "shingles = docsRdd.map(lambda x : shingling.shingle(x,shingleSize) )\n",
     "print(\"log: finished to create the shingles for all the documents\")\n",
     "\n",
     "# an array with all the unique shingles\n",
@@ -296,6 +306,8 @@
     "else:\n",
     "    for pair in shinglesChecked:\n",
     "        print(\"document {} and document {} are {} similar (jaccardSimilarity)\".format(pair[0][0],pair[0][1],pair[1]))\n",
+    "        print(docs[pair[0][0]])\n",
+    "        print(docs[pair[0][1]])\n",
     "\n",
     "\n"
    ]
