--- a/Spark.ipynb
+++ b/Spark.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true
    },
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -147,7 +147,6 @@
     "            self.a.append(random.randint(0,sys.maxsize))\n",
     "            self.b.append(random.randint(0,sys.maxsize))\n",
     "            self.c.append(random.randint(0,sys.maxsize))\n",
-    "        #print(\"a: {} b: {} c: {}\".format(self.a,self.b,self.c))\n",
     "        \n",
     "    def h(self, number, index):\n",
     "        return (self.a[index]*number+self.b[index])%self.c[index]\n",
@@ -174,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -220,22 +219,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
-    "import csv\n",
     "path = os.getcwd()+\"/OpinosisDataset1.0/topics/sound_ipod_nano_8gb.txt.data\"\n",
     "#for filename in os.listdir(directory):\n",
     "    \n",
     "with open(path) as f:\n",
-    "    docs = f.read().split('\\n')\n"
+    "    docs = f.read().split('\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -244,16 +244,18 @@
      "text": [
       "log: finished to create the shingles for all the documents\n",
       "log: finished to create the signatures\n",
-      "candidate pairs [[5, 19], [30, 49], [33, 54], [53, 78], [62, 66], [62, 76]]\n",
+      "candidate pairs [[15, 19], [15, 38], [26, 43], [30, 61], [53, 76], [62, 76]]\n",
       "checked with signatures pairs [[62, 76]]\n",
       "checked with shingles pairs [[[62, 76], 0.6170212765957447]]\n",
       "document 62 and document 76 are 0.6170212765957447 similar (jaccardSimilarity)\n",
       " It is compact and the sound quality is very good .\n",
-      " the sound quality is very good .\n"
+      " the sound quality is very good .\n",
+      "Total execution time: 0.7747781276702881s\n"
      ]
     }
    ],
    "source": [
+    "import time\n",
     "\n",
     "docsRdd = sc.parallelize(docs)\n",
     "\n",
@@ -268,6 +270,9 @@
     "minHashing = MinHashing(k=100)\n",
     "minHashing.randomize()\n",
     "lsh = LSH(band,r)\n",
+    "\n",
+    "# Timing the execution\n",
+    "start_time = time.time()\n",
     "\n",
     "# 1) create a list containiong all the sets of shingles of each document\n",
     "shingles = docsRdd.map(lambda x : shingling.shingle(x,shingleSize) )\n",
@@ -298,6 +303,7 @@
     "                        if compareSets.jaccardSimilarity(shinglesList[x[0]],shinglesList[x[1]]) > jaccardThreshold else []) \\\n",
     "                        .filter(lambda x: len(x)>0)\n",
     "print(\"checked with shingles pairs {}\".format(shinglesCheckedRdd.collect()))\n",
+    "total_time = time.time() - start_time\n",
     "\n",
     "# print the results (descending order of similarity):\n",
     "shinglesChecked = shinglesCheckedRdd.sortBy(lambda x : x[1], ascending=False).collect()\n",
@@ -309,7 +315,7 @@
     "        print(docs[pair[0][0]])\n",
     "        print(docs[pair[0][1]])\n",
     "\n",
-    "\n"
+    "print(\"Total execution time: \", total_time, \"s\", sep = '')\n"
    ]
   },
   {
