Remove overflow problem

--- a/Full Spark/source/LSH.ipynb
+++ b/Full Spark/source/LSH.ipynb
@@ -21,11 +21,9 @@
     "    def _h(self, intList):\n",
     "        # p is a prime number , a is a random number\n",
     "        p = 119983\n",
-    "        a = 5\n",
     "        sum = 0\n",
     "        for number in intList:\n",
-    "            sum = sum + (a * number)\n",
-    "            a = a * a\n",
+    "            sum = sum + number\n",
     "        return sum % p\n",
     "    \n",
     "    \n",
