--- a/Full Spark/source/TextualSimilarity.ipynb
+++ b/Full Spark/source/TextualSimilarity.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +14,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import os\n",
@@ -96,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 28,
    "metadata": {
     "scrolled": true
    },
@@ -106,7 +108,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Execution time: 0.9484431743621826s\n"
+      "Execution time: 0.8178756237030029s\n"
      ]
     }
    ],
@@ -119,7 +121,7 @@
     "sc = spark.sparkContext\n",
     "\n",
     "# Execute test\n",
-    "similarity = TextualSimilarity(\"../data/\", 5, 100, 20, 5, 0.6)\n",
+    "similarity = TextualSimilarity(\"../data/\", 5, 100, 2, 5, 0.1)\n",
     "similarity.execute(sc)"
    ]
   },
