--- a/Full Spark/source/TextualSimilarity.ipynb
+++ b/Full Spark/source/TextualSimilarity.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {
     "scrolled": true
    },
@@ -107,8 +107,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Similarity for documents reviewcy and reviewcb: 0.40384615384615385\n",
+      "Similarity for documents reviewcy and reviewda: 0.41025641025641024\n",
+      "Similarity for documents reviewaf and reviewat: 0.46511627906976744\n",
+      "Similarity for documents reviewcy and reviewck: 0.5454545454545454\n",
       "\n",
-      "Execution time: 0.8178756237030029s\n"
+      "Execution time: 0.7475759983062744s\n"
      ]
     }
    ],
@@ -121,7 +125,7 @@
     "sc = spark.sparkContext\n",
     "\n",
     "# Execute test\n",
-    "similarity = TextualSimilarity(\"../data/\", 5, 100, 2, 5, 0.1)\n",
+    "similarity = TextualSimilarity(\"../data/\", 5, 100, 50, 2, 0.4)\n",
     "similarity.execute(sc)"
    ]
   },
