--- a/Full Spark/source/LSH.ipynb
+++ b/Full Spark/source/LSH.ipynb
@@ -23,7 +23,7 @@
     "        p = 119983\n",
     "        sum = 0\n",
     "        for number in intList:\n",
-    "            sum = sum + number\n",
+    "            sum = sum + (number % p)\n",
     "        return sum % p\n",
     "    \n",
     "    \n",
