--- a/Full Spark/source/TextualSimilarity.ipynb
+++ b/Full Spark/source/TextualSimilarity.ipynb
@@ -2,8 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "%run Shingling.ipynb\n",
@@ -14,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 39,
    "metadata": {
     "collapsed": true
    },
@@ -98,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 40,
    "metadata": {
     "scrolled": true
    },
@@ -107,12 +109,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Similarity for documents reviewcy and reviewcb: 0.40384615384615385\n",
-      "Similarity for documents reviewcy and reviewda: 0.41025641025641024\n",
-      "Similarity for documents reviewaf and reviewat: 0.46511627906976744\n",
-      "Similarity for documents reviewcy and reviewck: 0.5454545454545454\n",
+      "Similarity for documents reviewck and reviewcb: 0.40350877192982454\n",
+      "Similarity for documents reviewda and reviewcb: 0.425531914893617\n",
+      "Similarity for documents reviewat and reviewap: 0.42857142857142855\n",
+      "Similarity for documents reviewcy and reviewda: 0.4594594594594595\n",
+      "Similarity for documents reviewaf and reviewat: 0.5\n",
+      "Similarity for documents reviewcy and reviewcb: 0.5333333333333333\n",
+      "Similarity for documents reviewcy and reviewck: 0.6341463414634146\n",
       "\n",
-      "Execution time: 0.7475759983062744s\n"
+      "Execution time: 0.820476770401001s\n"
      ]
     }
    ],
