--- a/Full Spark/source/CompareSets.ipynb
+++ b/Full Spark/source/CompareSets.ipynb
@@ -10,9 +10,8 @@
    "source": [
     "class CompareSets:\n",
     "   \n",
-    "    def __init__(self, signatures, threshold):\n",
+    "    def __init__(self, signatures):\n",
     "        self.signatures = signatures\n",
-    "        self.threshold = threshold\n",
     "        \n",
     "    \n",
     "    def _jaccard(self, r1, r2):\n",
@@ -28,14 +27,10 @@
     "        return len(intersection) / len(union)\n",
     "    \n",
     "    \n",
-    "    def calculate(self, pairs):\n",
-    "        # Calculates the similiarity for each pair\n",
-    "        similarities = dict()\n",
-    "        for pair in pairs:\n",
-    "            similarity = self._jaccard(pair[0], pair[1])\n",
-    "            if similarity >= self.threshold:\n",
-    "                similarities[pair] = similarity\n",
-    "        return similarities"
+    "    def calculate(self, pair):\n",
+    "        # Calculates the similiarity for the pair\n",
+    "        similarity = self._jaccard(pair[0], pair[1])\n",
+    "        return (pair, similarity)"
    ]
   }
  ],
