--- a/Full Spark/source/LSH.ipynb
+++ b/Full Spark/source/LSH.ipynb
@@ -22,25 +22,12 @@
     "        # p is a prime number , a is a random number\n",
     "        p = 119983\n",
     "        sum = 0\n",
+    "        a = 1\n",
     "        for number in intList:\n",
-    "            sum = sum + (number % p)\n",
+    "            sum = sum + (number * a)\n",
+    "            a += 1\n",
     "        return sum % p\n",
-    "    \n",
-    "    \n",
-    "    def candidates(self, pairs):\n",
-    "        # Given a set pairs, return those that are equal\n",
-    "        # for at least a t fraction of their content\n",
-    "        dictionary = dict()\n",
-    "        for band in pairs:\n",
-    "            for pair in band:\n",
-    "                if pair in dictionary:\n",
-    "                    dictionary[pair] += 1\n",
-    "                else:\n",
-    "                    dictionary[pair] = 1\n",
-    "        \n",
-    "        # Returns only the pairs that have at least a t fraction of similar components\n",
-    "        return [key for key, value in dictionary.items() if value / self.b >= self.t]\n",
-    "        \n",
+    "         \n",
     "    \n",
     "    def pairs(self, band):\n",
     "        # Applies hashing to the band to get similar columns\n",
