--- a/Full Spark/source/TextualSimilarity.ipynb
+++ b/Full Spark/source/TextualSimilarity.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -11,12 +11,13 @@
     "%run Shingling.ipynb\n",
     "%run CompareSets.ipynb\n",
     "%run MinHashing.ipynb\n",
+    "%run CompareSignatures.ipynb\n",
     "%run LSH.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -59,12 +60,20 @@
     "        return docs\n",
     "    \n",
     "    \n",
-    "    def _print_results(self, similarities):\n",
+    "    def _print_results(self, result):\n",
     "        message = \"\"\n",
-    "        for pair, similarity in sorted(similarities.items(), key = lambda x: x[1]):\n",
-    "            message += \"Similarity for documents \" + self.docs_names[pair[0]] \n",
-    "            message += \" and \" + self.docs_names[pair[1]] \n",
-    "            message += \": \" + str(similarity) + \"\\n\"\n",
+    "        for candidate in result:\n",
+    "            # Setting the docs and their similarity\n",
+    "            doc1 = candidate[0][0]\n",
+    "            doc2 = candidate[0][1]\n",
+    "            similarity = str(candidate[1])\n",
+    "            \n",
+    "            # Generating and printing the result\n",
+    "            message += \"Similarity for documents \" + self.docs_names[doc1] \n",
+    "            message += \" and \" + self.docs_names[doc2] \n",
+    "            message += \": \" + similarity + \"\\n\"\n",
+    "            message += \"\\t- \" + self.docs[doc1][1] + \"\\n\"\n",
+    "            message += \"\\t- \" + self.docs[doc2][1] + \"\\n\"\n",
     "        print(message)\n",
     "    \n",
     "    \n",
@@ -86,21 +95,24 @@
     "        # Create LSH object to get candidate pairs\n",
     "        lsh = LSH(self.band, self.r)\n",
     "        split = np.hsplit(np.stack(signatures), lsh.b)\n",
-    "        pairs = sc.parallelize(split).map(lsh.pairs)\n",
-    "        candidates = lsh.candidates(pairs.collect())\n",
+    "        pairs = sc.parallelize(split).flatMap(lsh.pairs).distinct()\n",
     "\n",
-    "        # Calculate Jaccard Similarity for the candidate pairs\n",
-    "        jaccard = CompareSets(signatures, self.threshold)\n",
-    "        similarities = jaccard.calculate(candidates)\n",
+    "        # Compare the signatures of the selected pairs\n",
+    "        comparer = CompareSignatures(signatures)\n",
+    "        candidates = pairs.filter(lambda x: comparer.compare(x) >= lsh.t)\n",
     "        \n",
-    "        # Printing the results and execution time\n",
-    "        self._print_results(similarities)\n",
+    "        # Calculate Jaccard Similarity for the candidate pairs\n",
+    "        jaccard = CompareSets(signatures)\n",
+    "        similarities = candidates.map(jaccard.calculate).filter(lambda x: x[1] >= self.threshold)\n",
+    "\n",
+    "        # Printing the results in order and execution time\n",
+    "        self._print_results(similarities.collect())\n",
     "        print(\"Execution time: \" + str(time.time() - start_time) + \"s\", sep = '')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 29,
    "metadata": {
     "scrolled": true
    },
@@ -109,15 +121,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Similarity for documents reviewck and reviewcb: 0.40350877192982454\n",
-      "Similarity for documents reviewda and reviewcb: 0.425531914893617\n",
-      "Similarity for documents reviewat and reviewap: 0.42857142857142855\n",
-      "Similarity for documents reviewcy and reviewda: 0.4594594594594595\n",
-      "Similarity for documents reviewaf and reviewat: 0.5\n",
-      "Similarity for documents reviewcy and reviewcb: 0.5333333333333333\n",
-      "Similarity for documents reviewcy and reviewck: 0.6341463414634146\n",
+      "Similarity for documents reviewcy and reviewck: 0.5952380952380952\n",
+      "\t-  the sound quality is very good .\n",
+      "\t-  It is compact and the sound quality is very good .\n",
       "\n",
-      "Execution time: 0.820476770401001s\n"
+      "Execution time: 0.9237532615661621s\n"
      ]
     }
    ],
@@ -130,18 +138,9 @@
     "sc = spark.sparkContext\n",
     "\n",
     "# Execute test\n",
-    "similarity = TextualSimilarity(\"../data/\", 5, 100, 50, 2, 0.4)\n",
+    "similarity = TextualSimilarity(\"../data/\", 5, 100, 20, 5, 0.5)\n",
     "similarity.execute(sc)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
