--- a/Full Spark/source/TextualSimilarity.ipynb
+++ b/Full Spark/source/TextualSimilarity.ipynb
@@ -37,6 +37,9 @@
     "\n",
     "class TextualSimilarity:\n",
     "    \n",
+    "    # threshold: Jaccard Similarity threshold\n",
+    "    # k_shingle: length of a shingle\n",
+    "    # k_sign: lenght of each signature\n",
     "    def __init__(self, directory, k_shingle, k_sign, band, r, threshold):\n",
     "        self.docs_names = dict()\n",
     "        self.docs = self._get_docs(directory)\n",
