--- a/Full Spark/source/TextualSimilarity.ipynb
+++ b/Full Spark/source/TextualSimilarity.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -105,7 +105,7 @@
     "        candidates = pairs.filter(lambda x: comparer.compare(x) >= lsh.t)\n",
     "        \n",
     "        # Calculate Jaccard Similarity for the candidate pairs\n",
-    "        jaccard = CompareSets(signatures)\n",
+    "        jaccard = CompareSets(shinglings.values().collect())\n",
     "        similarities = candidates.map(jaccard.calculate).filter(lambda x: x[1] >= self.threshold)\n",
     "\n",
     "        # Printing the results in order and execution time\n",
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {
     "scrolled": true
    },
@@ -124,11 +124,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Similarity for documents reviewcy and reviewck: 0.5952380952380952\n",
+      "Similarity for documents reviewcy and reviewck: 0.6170212765957447\n",
       "\t-  the sound quality is very good .\n",
       "\t-  It is compact and the sound quality is very good .\n",
       "\n",
-      "Execution time: 0.9237532615661621s\n"
+      "Execution time: 1.6256356239318848s\n"
      ]
     }
    ],
@@ -141,9 +141,18 @@
     "sc = spark.sparkContext\n",
     "\n",
     "# Execute test\n",
-    "similarity = TextualSimilarity(\"../data/\", 5, 100, 20, 5, 0.5)\n",
+    "similarity = TextualSimilarity(\"../data/\", 5, 100, 20, 5, 0.4)\n",
     "similarity.execute(sc)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
